deuxième sauvegarde avec début translate

--- a/index.html
+++ b/index.html
@@ -11,22 +11,26 @@
           <div class="d_g">
             <span class="date">25 Dec</span>
             <img class="gandalf" src="lego-4603354_640.jpg" alt="Photo du grand Gandalf le Gris">
-          /div>
+          </div>
         </header>
-        <main>
-          <span class="txt_photo">Photos</span>
-            <div class="titres">
-              <h1>Gandalf The Grey</h1>
-              <h2>Find these most beautiful quotes</h2>
-            </div>
-              <p>I believe that it is the little things, the everyday actions of ordinary people that keep us from harm.</p>
-        </main>
-        <footer>
-          <img src="lhorloge.webp" alt="horloge">
-          <span>6 mins ago</span>
-          <img src="messager.webp" alt="comments">
-          <span>39 comments</span>
-        </footer>
+        <div class="monter">
+          <main>
+            <span class="txt_photo">Photos</span>
+              <div class="titres">
+                <h1>Gandalf The Grey</h1>
+                <h2>Find these most beautiful quotes</h2>
+              </div>
+                <div class="parole">
+                  <p>I believe that it is the little things, the everyday actions of ordinary people that keep us from harm.</p>
+                </div>
+          </main>
+          <footer>
+            <img src="lhorloge.webp" alt="horloge">
+            <span>6 mins ago</span>
+            <img src="messager.webp" alt="comments">
+            <span>39 comments</span>
+          </footer>
+        </div>
       </div>
     </body>
     </html>
