sauvegarde avant animation

--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
     <title>Essai de Sass</title>
   </head>
     <body>
-      <div class="tout">
+      <div class="all">
         <header>
-          <div class="d_g">
-            <span class="date">25 Dec</span>
-            <img class="gandalf" src="lego-4603354_640.jpg" alt="Photo du grand Gandalf le Gris">
+          <div class="header__all">
+            <span class="header__date">25 Dec</span>
+            <img class="header__img" src="lego-4603354_640.jpg" alt="Photo du grand Gandalf le Gris">
           </div>
         </header>
-        <div class="monter">
-          <main>
-            <span class="txt_photo">Photos</span>
-              <div class="titres">
+        <div class="proj-main-footer">
+          <main class="proj-main">
+            <span class="proj-main__photos">Photos</span>
+              <div class="proj-main__titles">
                 <h1>Gandalf The Grey</h1>
                 <h2>Find these most beautiful quotes</h2>
               </div>
-                <div class="parole">
-                  <p>I believe that it is the little things, the everyday actions of ordinary people that keep us from harm.</p>
-                </div>
+              <div class="proj-main__txt">
+                <p>I believe that it is the little things, the everyday actions of ordinary people that keep us from harm.</p>
+              </div>
           </main>
           <footer>
             <img src="lhorloge.webp" alt="horloge">
-            <span>6 mins ago</span>
+            <span class="comments">6 mins ago</span>
             <img src="messager.webp" alt="comments">
-            <span>39 comments</span>
+            <span class="comments">39 comments</span>
           </footer>
         </div>
       </div>
