--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <title>Essai de Sass</title>
   </head>
     <body>
-      <div class="all">
+      <div class="animation">
         <header>
-          <div class="header__all">
             <span class="header__date">25 Dec</span>
-            <img class="header__img" src="lego-4603354_640.jpg" alt="Photo du grand Gandalf le Gris">
-          </div>
+            <div class="header__img">
+            <img src="lego-4603354_640.jpg" alt="Photo du grand Gandalf le Gris">
+            </div>
         </header>
-        <div class="proj-main-footer">
           <main class="proj-main">
             <span class="proj-main__photos">Photos</span>
               <div class="proj-main__titles">
@@ -24,13 +23,12 @@
                 <p>I believe that it is the little things, the everyday actions of ordinary people that keep us from harm.</p>
               </div>
           </main>
+        </div>
           <footer>
             <img src="lhorloge.webp" alt="horloge">
             <span class="comments">6 mins ago</span>
             <img src="messager.webp" alt="comments">
             <span class="comments">39 comments</span>
           </footer>
-        </div>
-      </div>
     </body>
     </html>
